[tool.poetry]
name = "libertai-agents"
version = "0.0.1"
description = ""
authors = ["Reza Rahemtola <49811529+RezaRahemtola@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
