[tool.poetry]
name = "libertai-agents"
version = "0.0.1"
description = ""
authors = ["Reza Rahemtola <49811529+RezaRahemtola@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.44.0"
jinja2 = "^3.1.4"
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
ruff = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
