[tool.poetry]
name = "libertai-agents"
version = "0.0.6"
description = ""
authors = ["Reza Rahemtola <49811529+RezaRahemtola@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://libertai.io"
repository = "https://github.com/LibertAI/libertai-agents"
documentation = "https://docs.libertai.io"
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.44.0"
jinja2 = "^3.1.4"
pydantic = "^2.8.2"
aiohttp = "^3.10.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
ruff = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
