[tool.poetry]
name = "libertai-agents-backend"
version = "0.1.0"
description = ""
authors = ["LibertAI.io team <hello@libertai.io>"]
readme = "README.md"
homepage = "https://libertai.io"
repository = "https://github.com/LibertAI/libertai-agents"
documentation = "https://docs.libertai.io"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["standard"], version = "^0.115.2" }
aleph-sdk-python = "^1.1.0"
eciespy = "^0.4.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.12.0"
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
